--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@prisma/client": "6.15.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "highlight.js": "^11.11.1",
     "lucide-react": "^0.542.0",
     "next": "15.5.2",
     "next-auth": "^4.24.11",
@@ -23,7 +24,10 @@
     "pusher-js": "^8.4.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-markdown": "^10.1.0",
     "react-textarea-autosize": "^8.5.9",
+    "rehype-highlight": "^7.0.2",
+    "remark-gfm": "^4.0.1",
     "swr": "^2.3.6",
     "tailwind-merge": "^3.3.1"
   },
